--- a/css/stlyes.css
+++ b/css/stlyes.css
@@ -1,21 +1,22 @@
 body{
-    background-color: blueviolet;
+    background-color: rgb(90, 29, 148);
     overflow-y: hidden;
-    background-image: url();
+    opacity: 3px;
 }
 img{
-    float: right;
-    height: 590px;
+    float: left;
+    height: 560px;
     width: 590px;
     border-right: violet;
     flex-wrap: 20px;
     opacity: 2px; 
+    image-orientation: flip;
 }
 #projects{
     text-align: center;
 }
 .name{
-    text-align: center;
+    text-align: left;
     -moz-text-size-adjust: 50px;
     text-decoration: whitesmoke;
     color: yellowgreen;
@@ -23,21 +24,27 @@ img{
 h2{
     text-align: center;
      padding-bottom: 20px solid green;
+     padding: 30px solid white;
+     color: yellowgreen;
 }
-/*ul{
+ul{
     text-align: center;
+    color: aliceblue;
 }
 li{
     text-align: center;
+    font-weight: 300px;
 }
 p{
     text-align: center;
-}*/
-span{
+    color: violet;
+}
+.link{
     color: yellowgreen;
 }
 #footer{
     text-align: center;
     color: tomato;
     margin-bottom: -300px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
