--- a/css/stlyes.css
+++ b/css/stlyes.css
@@ -1,11 +1,13 @@
 body{
     background-color: rgb(90, 29, 148);
     overflow-y: hidden;
+    background-image: url(https://images.unsplash.com/photo-1585079542156-2755d9c8a094?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
+    background-repeat: inherit;
     opacity: 3px;
 }
 img{
     float: left;
-    height: 560px;
+    height: 600px;
     width: 590px;
     border-right: violet;
     flex-wrap: 20px;
